# AIGuardians

./: .gitignore  ADR.md  LICENSE  README.md  a.json  b.json  c.json  d.json  docker-compose.yml  start.sh  test.sh
frontend/: Dockerfile  README.md  index.html
frontend/src/components/: CustomizationMenu.vue
frontend/src/components/dashboard/: TableCard.vue
frontend/src/components/navigation/: MainSidebar.vue
frontend/src/components/toolbar/: LanguageSwitcher.vue  MainAppbar.vue
frontend/src/configs/: locales.ts  navigation.ts
frontend/src/configs/menus/: ai.menu.ts
frontend/src/layouts/: UILayout.vue
frontend/src/locales/: en.ts  ja.ts  pa.ts  zhHans.ts
frontend/src/router/: ai.routes.ts  index.ts
frontend/src/types/: env.d.ts
frontend/src/utils/: aiUtils.ts
frontend/src/views/chart/component/: PieChart1.vue
frontend/src/views/chatgpt/: ChatBotV1.vue  ChatBotV2.vue  ChatBotV3.vue  VoiceBot.vue
frontend/src/views/pages/: DashBoard.vue
llm/: diagram.py
llm/llm-backend/: Dockerfile  config.yaml  pyproject.toml
llm/llm-backend/app/: server.py
llm/notebooks/: AI_inclusion.ipynb
orchestrator/: Dockerfile  README.md  endpoints.md  package.json
orchestrator/src/: index.js
orchestrator/src/public/: index.html
orchestrator/src/routes/: Postcode SA2 mapping.csv  llm.js  user.js
