[tool.poetry]
name = "llm-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
langchain = ">=0.1.20"
langserve = {extras = ["server"], version = ">=0.0.30"}
pydantic = "^2"
#rag-chroma-private = {path = "packages/rag-chroma-private", develop = true}
langchain-google-genai = "^1.0.10"
#langchain-ollama = "0.1.3"
langchain-openai = "^0.1.23"


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
